--- a/README.rdoc
+++ b/README.rdoc
@@ -30,6 +30,12 @@ If you want to use it as plugin
 
   (1..555).to_a.paginate :page => 1, :per_page => 10
 
+== Test environments
+
+* ruby-1.9.2
+* ruby-1.8.7
+* ree-1.8.7
+* jruby-1.5.6
 
 == Maintainers
 
