--- a/README.rdoc
+++ b/README.rdoc
@@ -53,11 +53,25 @@ after bundle execute
 
 === ActiveRecord
 
-  User.order(:login).where(:active => 1).paginate :page => 1, :per_page => 10
+  @collection = User.order(:login).where(:active => 1).paginate :page => 1, :per_page => 10
 
 === Array
 
-  (1..555).to_a.paginate :page => 1, :per_page => 10
+  @collection = (1..555).to_a.paginate :page => 1, :per_page => 10
+
+=== View
+
+  # default
+  paginate @collection
+
+  # with class
+  paginate @collection, :class => "super"
+
+  # with class
+  paginate @collection, :class => "super"
+
+  # with ajax
+  paginate @collection, :remote => true, :method => :get
 
 == Requirements
 
