update Gems fix rails dependecy optimize locales

--- a/lib/generators/templates/config/locales/en.yml
+++ b/lib/generators/templates/config/locales/en.yml
@@ -1,7 +1,7 @@
 de:
   paginate:
-    first_page_label: first
-    last_page_label: last
+    first_page_label: "first"
+    last_page_label: "last"
     previous_page_label: "« previous"
     next_page_label: "next »"
-    pager: %{page}
+    pager: "%{page}"
